--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 ﻿################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
-
 .vs
-mazeCreator\obj\Debug
+\\mazeCreator\
